@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2013-2021 Laboratoire de Recherche et Développement de
+# Copyright (C) 2013-2022 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -113,7 +113,7 @@ run 0 ../ikwiad -x -DC 'GFa & XGFb' > out.tgba
 cat >ex.tgba <<EOF
 digraph "GFa & XGFb" {
   rankdir=LR
-  label="\n[Büchi]"
+  label="[Büchi]"
   labelloc="t"
   node [shape="circle"]
   I [label="", style=invis, width=0]
