@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2010-2015, 2017-2018, 2020 Laboratoire
+# Copyright (C) 2010-2015, 2017-2018, 2020, 2022 Laboratoire
 # de Recherche et Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -134,7 +134,7 @@ run 0 ../ikwiad -XN input > stdout
 cat >expected <<EOF
 digraph "" {
   rankdir=LR
-  label="\n[Büchi]"
+  label="[Büchi]"
   labelloc="t"
   node [shape="circle"]
   I [label="", style=invis, width=0]
