@@ -61,7 +61,7 @@
       "\n",
       "digraph \"\" {\n",
       "  rankdir=LR\n",
-      "  label=<<br/>[Büchi]>\n",
+      "  label=<[Büchi]>\n",
       "  labelloc=\"t\"\n",
       "  node [shape=\"circle\"]\n",
       "  node [style=\"filled\", fillcolor=\"#ffffaa\"]\n",
